[metadata]
name = uni_messaging
version = 0.0.1
description = sample text
url = https://github.com/pre-commit/pre-commit-hooks
author = Mary Jane
author_email = mj@umich.edu
license = MIT
license_files = LICENSE

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.8
